# visma-bulker

./: Cargo.toml  README.md  visma_navigation.rs
src/: main.rs  visma_navigation.rs
src/bulking/: article.rs
src/generator/: article.rs
src/visma_navigation/: cookie_loading.rs
